--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <div class="container2">
             <nav>
-                <img src="./images/Combined Shape.png" alt="">
+                <img class="nav-img" src="./images/Combined Shape.png" alt="">
 
 
                 <ul class="list">
