--- a/Portfoilo.html
+++ b/Portfoilo.html
@@ -5,6 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+        integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+
     <link rel="stylesheet" href="./portfoilo.css">
 </head>
 
@@ -15,13 +21,14 @@
         
 
         <div class="portfoilo-navbar">
-            <img src="./images/Combined Shape.png" alt="">
+            <img class="nav-img" src="./images/Combined Shape.png" alt="">
             <div class="portfoilo-list">
                 <ul>
                     <li class="port-nav-list"><a href="index.html" class="port-nav-link">Home</a></li>
                     <li class="port-nav-list"><a href="#" class="port-nav-link">Portfoilo</a></li>
                     <li class="port-nav-list"><a href="contact.html" class="port-nav-link">Contact Us</a></li>
                 </ul>
+                <i class="fa-solid fa-bars"></i>
             </div>
         </div>
 
